--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,18 @@
+* {
+  box-sizing: border-box;
+}
+
+button {
+  border: 0;
+  padding: 0;
+  background: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .sr-only:not(:focus):not(:active) {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
@@ -6,12 +21,6 @@
   position: absolute;
   white-space: nowrap;
   width: 1px;
-}
-
-button {
-  border: 0;
-  padding: 0;
-  background: none;
 }
 
 nav {
@@ -40,6 +49,21 @@ nav {
   background-color: pink;
   height: 50px;
   width: 50px;
+}
+
+#nav-links {
+  position: absolute;
+  top: 80px;
+  left: 0;
+  background: lightgray;
+  width: 100%;
+  padding: 10px 20px;
+}
+#nav-links li {
+  padding: 15px 0;
+}
+#nav-links li:not(:last-child) {
+  border-bottom: 2px solid grey;
 }
 
 /*# sourceMappingURL=style.css.map */
