--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,3 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+// reset styles
+button {
+  border: 0;
+  padding: 0;
+  background: none;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 // screen reader only (from https://www.a11yproject.com/posts/how-to-hide-content/)
 .sr-only:not(:focus):not(:active) {
   clip: rect(0 0 0 0);
@@ -8,12 +22,7 @@
   white-space: nowrap;
   width: 1px;
 }
-// reset styles
-button {
-  border: 0;
-  padding: 0;
-  background: none;
-}
+
 
 // navbar
 nav {
@@ -41,4 +50,20 @@ nav {
   background-color: pink;
   height: 50px;
   width: 50px;
+}
+
+#nav-links {
+  position: absolute;
+  top: 80px; // under navbar
+  left: 0;
+  background: lightgray;
+  width: 100%;
+  padding: 10px 20px;
+
+  li {
+    padding: 15px 0;
+  }
+  li:not(:last-child) {
+    border-bottom: 2px solid grey;
+  }
 }
