--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -68,3 +68,10 @@ nav {
     border-bottom: 2px solid grey;
   }
 }
+
+// hero section
+.hero-img {
+  background-color: darkcyan;
+  height: 250px;
+  width: 100%;
+}
