--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -82,12 +82,31 @@ nav {
   .glide__arrow {
     position: absolute;
     font-size: 30px;
-    top: 110px; // img height(250)/2 - self(30)/2
+    top: 50%;
+    transform: translateY(-50%);
   }
   .glide__arrow--left {
     left: 0;
   }
   .glide__arrow--right {
     right: 0;
+  }
+
+  .glide__bullets {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .glide__bullet {
+    font-size: 10px;
+    transition: opacity 200ms ease-in-out;
+    opacity: 0.4;
+  }
+  .glide__bullet:not(:last-child) {
+    padding-right: 20px;
+  }
+  .glide__bullet--active {
+    opacity: 1;
   }
 }
