--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,9 +2,11 @@
   box-sizing: border-box;
 }
 
-button {
+button,
+input {
   border: 0;
   padding: 0;
+  margin: 0;
   background: none;
 }
 
@@ -49,6 +51,30 @@ nav {
   background-color: pink;
   height: 50px;
   width: 50px;
+}
+
+#nav-search-bar {
+  position: absolute;
+  z-index: 11;
+  top: 80px;
+  left: 0;
+  font-size: 0;
+  width: 100%;
+  background-color: grey;
+}
+#nav-search-bar input[type=search] {
+  vertical-align: top;
+  height: 50px;
+  width: calc(100% - 50px);
+  background-color: #fff;
+  padding: 0 10px;
+  font-size: 16px;
+}
+#nav-search-bar #search-btn {
+  font-size: 20px;
+  height: 50px;
+  width: 50px;
+  background-color: lightgray;
 }
 
 #nav-links {
