--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -139,3 +139,22 @@ nav {
     opacity: 1;
   }
 }
+
+// products section
+#products {
+  padding: 30px 20px;
+}
+
+.products-categories {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+
+  button {
+    font-size: 20px;
+    padding: 5px 10px;
+    border-radius: 20px;
+    border: 2px solid grey;
+  }
+}
