Add product category buttons functionality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,6 +158,10 @@ nav {
   gap: 20px;
 }
 
+.product-cards:not(.active) {
+  display: none;
+}
+
 .product-card {
   max-width: 150px;
 }
@@ -167,15 +171,15 @@ nav {
   height: 150px;
 }
 
-.products-featured .product-img {
+#products-featured .product-img {
   background-color: darkred;
 }
 
-.products-new .product-img {
+#products-new .product-img {
   background-color: darkorange;
 }
 
-.products-bestsellers .product-img {
+#products-bestsellers .product-img {
   background-color: darkgreen;
 }
 
