--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -140,11 +140,12 @@ nav {
   }
 }
 
-// products section
-#products {
+#products,
+#collections {
   padding: 30px 20px;
 }
 
+// products section
 .products-categories {
   display: flex;
   flex-wrap: wrap;
@@ -194,4 +195,32 @@ nav {
 .product-price {
   padding-bottom: 10px;
   font-size: 16px;
+}
+
+// collections section
+#collections h2 {
+  font-size: 24px;
+}
+
+#collections-container {
+  padding-top: 30px;
+}
+
+.collection-img {
+  background-color: goldenrod;
+  max-width: 100%;
+}
+#collection-1 {
+  width: 150px;
+  height: 300px;
+}
+#collection-2,
+#collection-3 {
+  width: 150px;
+  height: 150px;
+}
+#collection-4,
+#collection-5 {
+  width: 300px;
+  height: 150px;
 }
