--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -115,10 +115,10 @@ nav {
     transform: translateY(-50%);
   }
   .glide__arrow--left {
-    left: 0;
+    left: 5px;
   }
   .glide__arrow--right {
-    right: 0;
+    right: 5px;
   }
 
   .glide__bullets {
