--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -200,10 +200,7 @@ nav {
 // collections section
 #collections h2 {
   font-size: 24px;
-}
-
-#collections-container {
-  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .collection-img {
