--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,4 +222,30 @@ nav {
   height: 150px;
 }
 
+footer {
+  background-color: lightgrey;
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+footer h2 {
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
+.footer-links li:not(:last-child) {
+  padding-bottom: 5px;
+}
+
+.footer-socials ul {
+  display: flex;
+  gap: 10px;
+}
+
+.social-icon {
+  font-size: 24px;
+}
+
 /*# sourceMappingURL=style.css.map */
