--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -157,6 +157,11 @@ nav {
     padding: 5px 10px;
     border-radius: 20px;
     border: 2px solid grey;
+    transition: all 200ms ease-in-out;
+  }
+  button.active {
+    border-color: darkgoldenrod;
+    background-color: palegoldenrod;
   }
 }
 
