--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,6 +94,33 @@ nav {
   display: none;
 }
 
+#hero {
+  position: relative;
+}
+
+.hero-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  padding: 20px;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.hero-overlay h2 {
+  font-size: 30px;
+  line-height: 36px;
+  max-width: 200px;
+}
+.hero-overlay button {
+  font-size: 18px;
+  background-color: #fff;
+  padding: 8px 10px;
+}
+
 .hero-img img {
   height: 250px;
   width: 100%;
