--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,9 +44,19 @@ nav {
 }
 
 #nav-logo {
-  background-color: pink;
-  height: 50px;
-  width: 50px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+#nav-logo img {
+  height: 40px;
+  width: auto;
+}
+#nav-logo h1 {
+  font-size: 18px;
+  letter-spacing: 5px;
+  font-weight: 500;
+  font-family: "Ubuntu", sans-serif;
 }
 
 #nav-search-bar {
