--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -25,10 +25,22 @@ a {
   width: 1px;
 }
 
+$brown: #604d3e;
+$brown-2: #ab998c;
+$bg: #fff6ee;
+$bg-2: #eeded1;
+$font-primary: "Ubuntu", sans-serif;
+$font-secondary: "Noto Sans", sans-serif;
+
+body {
+  font-family: $font-primary;
+  color: $brown;
+}
+
 
 // navbar
 nav {
-  background-color: #fff6ee;
+  background-color: $bg;
   height: 60px;
   padding: 0 20px;
   display: flex;
@@ -42,7 +54,7 @@ nav {
 
 .nav-group i,
 #nav-logo h1 {
-  color: #604d3e;
+  color: $brown;
 }
 
 // icons
@@ -66,7 +78,6 @@ nav {
     font-size: 18px;
     letter-spacing: 5px;
     font-weight: 500;
-    font-family: "Ubuntu", sans-serif;
   }
 }
 
@@ -102,14 +113,17 @@ nav {
 #nav-links {
   display: none;
   z-index: 10;
-  background: lightgray;
+  background: $bg-2;
   padding: 10px 20px;
 
   li {
     padding: 15px 0;
+    font-size: 16px;
+    font-family: $font-secondary;
+    font-weight: 500;
   }
   li:not(:last-child) {
-    border-bottom: 2px solid grey;
+    border-bottom: 2px solid $brown-2;
   }
 }
 
