--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,6 +80,12 @@ nav {
   width: 100%;
 }
 
+#nav-links,
+#nav-search-bar input[type=search] {
+  border-top: 2px solid #ab998c;
+  border-bottom: 2px solid #ab998c;
+}
+
 #nav-search-bar {
   z-index: 11;
   font-size: 0;
@@ -90,14 +96,16 @@ nav {
   height: 50px;
   width: calc(100% - 50px);
   background-color: #fff;
-  padding: 0 10px;
+  padding: 0 20px;
   font-size: 16px;
+  font-family: "Noto Sans", sans-serif;
 }
 #nav-search-bar #search-btn {
   font-size: 20px;
   height: 50px;
   width: 50px;
-  background-color: lightgray;
+  background-color: #604d3e;
+  color: #fff6ee;
 }
 
 #nav-links {
