--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -88,6 +88,11 @@ nav {
   left: 0;
   width: 100%;
 }
+#nav-links,
+#nav-search-bar input[type="search"] {
+  border-top: 2px solid $brown-2;
+  border-bottom: 2px solid $brown-2;
+}
 
 #nav-search-bar {
   z-index: 11;
@@ -99,14 +104,16 @@ nav {
     height: 50px;
     width: calc(100% - 50px);
     background-color: #fff;
-    padding: 0 10px;
+    padding: 0 20px;
     font-size: 16px;
+    font-family: $font-secondary;
   }
   #search-btn {
     font-size: 20px;
     height: 50px;
     width: 50px;
-    background-color: lightgray;
+    background-color: $brown;
+    color: $bg;
   }
 }
 
