--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -96,24 +96,36 @@ nav {
 
 #nav-search-bar {
   z-index: 11;
-  font-size: 0; // remove gap between elements
-  background-color: grey;
 
-  input[type="search"] {
-    vertical-align: top;
-    height: 50px;
-    width: calc(100% - 50px);
-    background-color: #fff;
-    padding: 0 20px;
+  input[type="search"],
+  .autoComplete_wrapper ul {
     font-size: 16px;
     font-family: $font-secondary;
   }
-  #search-btn {
-    font-size: 20px;
+  input[type="search"] {
     height: 50px;
-    width: 50px;
-    background-color: $brown;
-    color: $bg;
+    width: 100%;
+    background-color: #fff;
+    padding: 0 20px;
+  }
+  .autoComplete_wrapper ul:not([hidden]) {
+    padding: 30px 20px;
+    background-color: #fff;
+    border-bottom: 2px solid $brown-2;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    li:not(:last-child) {
+      padding-bottom: 20px;
+      border-bottom: 2px solid $brown-2;
+    }
+    // highlight on matched letters
+    mark {
+      color: $brown;
+      font-weight: 800;
+      background: none;
+    }
   }
 }
 
