--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,13 +47,21 @@ nav {
   gap: 20px;
 }
 
-.nav-group i,
-#nav-logo h1 {
-  color: #604d3e;
+#nav-links a,
+.nav-group button i {
+  transition: all 100ms ease-out;
+}
+
+#nav-links a:hover,
+#nav-links a:focus,
+.nav-group button:hover i,
+.nav-group button:focus i {
+  color: #a0381f;
 }
 
 .nav-group i {
   cursor: pointer;
+  color: #604d3e;
 }
 
 .nav-left i {
@@ -134,6 +142,15 @@ nav {
   font-size: 16px;
   font-family: "Noto Sans", sans-serif;
   font-weight: 500;
+}
+#nav-links a {
+  padding: 0 10px;
+  border-radius: 20px;
+  border: 2px solid transparent;
+}
+#nav-links a:hover,
+#nav-links a:focus {
+  border-color: #a0381f;
 }
 
 .hidden {
@@ -349,8 +366,7 @@ footer h2 {
     display: block;
   }
   #nav-links ul {
-    padding: 0 20px;
-    height: 35px;
+    padding: 0 10px;
     display: flex;
     gap: 20px;
     justify-content: space-between;
