--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -109,21 +109,38 @@ nav {
 
 #nav-search-bar {
   z-index: 11;
+  font-size: 0; // remove gap between elements
 
+  form {
+    display: flex;
+  }
   input[type="search"],
   .autoComplete_wrapper ul {
     font-size: 16px;
     font-family: $font-secondary;
   }
+  .autoComplete_wrapper {
+    width: calc(100% - 50px);
+  }
   input[type="search"] {
-    height: 50px;
     width: 100%;
+    height: 50px;
     background-color: #fff;
     padding: 0 20px;
   }
+  #search-btn {
+    height: 50px;
+    width: 50px;
+    background-color: $accent;
+
+    i {
+      font-size: 20px;
+      color: $bg;
+    }
+  }
   .autoComplete_wrapper ul:not([hidden]) {
     position: absolute;
-    width: 100%;
+    width: calc(100% - 50px);
     padding: 30px 20px;
     background-color: #fff;
     border-bottom: 2px solid $brown-2;
