Fix layout on extra small screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -173,6 +173,7 @@ header {
 
 #hero {
   position: relative;
+  height: 250px;
 }
 
 .hero-overlay {
@@ -362,6 +363,15 @@ footer h2 {
   font-size: 24px;
 }
 
+@media only screen and (max-width: 380px) {
+  #nav-logo h1 {
+    display: none;
+  }
+  #hero-carousel .hero-img img {
+    height: 250px;
+    width: auto;
+  }
+}
 @media only screen and (max-width: 767px) {
   .hidden {
     display: none;
