--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,7 +177,6 @@ header {
 
 #hero {
   position: relative;
-  height: 250px;
 }
 
 .hero-overlay {
@@ -199,7 +198,7 @@ header {
 }
 .hero-overlay h2 {
   font-size: 26px;
-  line-height: 36px;
+  line-height: 30px;
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
   padding: 5px 10px;
@@ -232,17 +231,18 @@ header {
   cursor: pointer;
   color: #604d3e;
 }
-#hero-carousel .glide__arrow {
+#hero-carousel .glide__arrows {
   position: absolute;
-  font-size: 30px;
+  z-index: 2;
+  display: flex;
+  width: 100%;
+  padding: 0 2px;
+  justify-content: space-between;
   top: 50%;
   transform: translateY(-50%);
 }
-#hero-carousel .glide__arrow--left {
-  left: 2px;
-}
-#hero-carousel .glide__arrow--right {
-  right: 2px;
+#hero-carousel .glide__arrow {
+  font-size: 30px;
 }
 #hero-carousel .glide__bullets {
   position: absolute;
