--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -188,7 +188,6 @@ header {
 // hero section
 #hero {
   position: relative;
-  height: 250px;
 }
 .hero-overlay {
   position: absolute;
@@ -209,7 +208,7 @@ header {
   }
   h2 {
     font-size: 26px;
-    line-height: 36px;
+    line-height: 30px;
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
     padding: 5px 10px;
@@ -246,17 +245,18 @@ header {
     cursor: pointer;
     color: $brown;
   }
-  .glide__arrow {
+  .glide__arrows {
     position: absolute;
-    font-size: 30px;
+    z-index: 2;
+    display: flex;
+    width: 100%;
+    padding: 0 2px;
+    justify-content: space-between;
     top: 50%;
     transform: translateY(-50%);
   }
-  .glide__arrow--left {
-    left: 2px;
-  }
-  .glide__arrow--right {
-    right: 2px;
+  .glide__arrow {
+    font-size: 30px;
   }
 
   .glide__bullets {
@@ -492,5 +492,9 @@ footer {
     .glide__slides {
       height: 400px;
     }
+
+    // .glide__arrows {
+    //   padding: 20px;
+    // }
   }
 }
