Style desktop hero overlay

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,20 @@ body {
   color: #604d3e;
 }
 
+#search-btn,
+.hero-overlay button {
+  cursor: pointer;
+  background-color: #604d3e;
+  transition: background-color 100ms ease-out;
+}
+
+#search-btn:hover,
+#search-btn:active,
+.hero-overlay button:hover,
+.hero-overlay button:active {
+  background-color: #a0381f;
+}
+
 header {
   background-color: #fff6ee;
 }
@@ -121,16 +135,10 @@ header {
 #nav-search-bar #search-btn {
   height: 50px;
   width: 50px;
-  background-color: #604d3e;
-  transition: background-color 100ms ease-out;
 }
 #nav-search-bar #search-btn i {
   font-size: 20px;
   color: #fff;
-}
-#nav-search-bar #search-btn:hover,
-#nav-search-bar #search-btn:active {
-  background-color: #a0381f;
 }
 #nav-search-bar .autoComplete_wrapper ul:not([hidden]) {
   position: absolute;
@@ -183,7 +191,7 @@ header {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 3;
   padding: 10px;
   display: flex;
   height: 100%;
@@ -210,6 +218,10 @@ header {
   color: #fff;
   padding: 6px 15px;
   margin-bottom: 20px;
+}
+.hero-overlay button:hover,
+.hero-overlay button:active {
+  background-color: #a0381f;
 }
 
 #hero-carousel {
@@ -451,7 +463,6 @@ footer h2 {
     height: 40px;
     width: 50px;
     border-radius: 0 20px 20px 0;
-    background-color: #604d3e;
   }
   #nav-search-bar #search-btn i {
     margin-left: -5px;
@@ -460,8 +471,29 @@ footer h2 {
     top: 60px;
     border-radius: 20px;
   }
+  .hero-overlay {
+    padding: 20px;
+    width: 100%;
+    max-width: 1000px;
+    left: 50%;
+    transform: translateX(-50%);
+    justify-content: flex-start;
+    gap: 20px;
+  }
+  .hero-overlay h2 {
+    font-size: 36px;
+    line-height: 40px;
+    padding: 8px 16px;
+  }
+  .hero-overlay button {
+    font-size: 20px;
+    padding: 10px 20px;
+  }
   #hero-carousel .glide__slides {
-    height: 400px;
+    height: 300px;
+  }
+  #hero-carousel .glide__arrows {
+    padding: 0 20px;
   }
 }
 
